<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_1"
        android:padding="20dp"
        android:textSize="30sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF001577"
        android:textStyle="bold"
        android:gravity="center" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:src="@drawable/img1"
                android:contentDescription="@string/android_1"
                android:scaleType="fitCenter"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:src="@drawable/img2"
                android:contentDescription="@string/android_2"
                android:layout_marginEnd="10dp"
                android:scaleType="fitCenter"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:src="@drawable/img3"
                android:contentDescription="@string/android_3"
                android:layout_marginEnd="10dp"
                android:scaleType="fitCenter"
                android:layout_weight="1" />


            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:src="@drawable/img4"
                android:contentDescription="@string/android_4"
                android:scaleType="fitCenter"
                android:layout_weight="1" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>