<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragments_play"
        android:padding="20dp"
        android:textSize="30sp"
        android:textColor="#FFFFFFFF"
        android:background="#FF001577"
        android:textStyle="bold"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:id="@+id/changeFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_fragment_button"
            android:backgroundTint="#FF001577"
            android:textColor="#FFFFFFFF"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/showNotificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_notification_button"
            android:backgroundTint="#FF001577"
            android:textColor="#FFFFFFFF"
            android:layout_marginBottom="20dp"/>

        <FrameLayout
            android:id="@+id/fragmentHolder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>